<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAzure"
    android:theme="@style/AppLogin"
    tools:context=".LoginActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="50dp"
        android:background="@color/colorPrimaryDark1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Selamat Datang di MIU17 Studio"
            android:textSize="25dp"
            android:textColor="#fff"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content_text"
            android:textSize="15sp"
            android:textColor="#fff"
            android:layout_marginTop="25dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="40dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnMore"
                android:text="Selengkapnya..."
                android:layout_margin="10dp"
                android:textColor="#fff"
                android:background="@drawable/buttonstyle"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnSignup"
                android:text="Gabung Sekarang"
                android:layout_margin="10dp"
                android:textColor="#fff"
                android:background="@drawable/buttonstyle2"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:gravity="center">
        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/user"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_person_grey68_24dp"/>
        <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:drawablePadding="10dp"
            android:id="@+id/edtPass"
            android:drawableLeft="@drawable/ic_lock_grey68_24dp"/>
        <Button
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_send_white_24dp"
            android:text="Login"
            android:layout_marginTop="45dp"
            android:textColor="#fff"
            android:layout_marginBottom="@dimen/activity_vertical_layout"
            android:background="@drawable/buttonstyle1"
            android:id="@+id/btnLogin"/>

    </LinearLayout>
</LinearLayout>
</ScrollView>