<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAzure"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="30dp"
            android:background="@color/colorWhite"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:text="@string/daftar"
                    android:textSize="30sp"
                    android:textStyle="bold" />
                <EditText
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="40dp"
                    android:hint="@string/user"
                    android:background="@drawable/edittextstyle"
                    android:id="@+id/edtUsername"/>
                <EditText
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/edittextstyle"
                    android:layout_marginTop="@dimen/activity_vertical_layout"
                    android:hint="@string/email"
                    android:id="@+id/edtEmail"/>
                <EditText
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/edittextstyle"
                    android:layout_marginTop="@dimen/activity_vertical_layout"
                    android:hint="@string/pass"
                    android:id="@+id/edtPass"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/activity_vertical_layout"
                    android:background="@drawable/buttonstyle"
                    android:text="@string/daftar"
                    android:textColor="@color/colorWhite"
                    android:id="@+id/btnRegister"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="30dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Sign Up With Social Media"
                        android:textSize="25sp"
                        android:textColor="@color/colorWhite"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/activity_vertical_layout"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="@dimen/activity_vertical_layout"
                        android:layout_gravity="center_horizontal">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginTop="@dimen/activity_vertical_layout"
                            android:layout_marginRight="20dp"
                            android:src="@drawable/fb"/>
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginTop="@dimen/activity_vertical_layout"
                            android:layout_marginRight="20dp"
                            android:src="@drawable/tw"/>
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginTop="@dimen/activity_vertical_layout"
                            android:layout_marginRight="20dp"
                            android:src="@drawable/in"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</ScrollView>